# aam-py

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
aam_py/: __init__.py  aaml.py  builder.py  error.py  found_value.py  parsing.py  validation.py
aam_py/commands/: __init__.py  derive.py  import_cmd.py  schema_cmd.py  type_cmd.py
aam_py/types/: __init__.py  list.py  math.py  physics.py  primitive_type.py  time.py
docs/: error.md  index.md
docs/api/: commands.md  core.md  index.md  parsing.md  types.md  validation.md
site/: 404.html  index.html  objects.inv  search.json
site/api/: index.html
site/api/commands/: index.html
site/api/core/: index.html
site/api/parsing/: index.html
site/api/types/: index.html
site/api/validation/: index.html
site/error/: index.html
tests/: test_core.py  test_derive.py  test_imports.py  test_parsing.py  test_type_validation.py
