[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aam-py"
version = "0.1.0"
authors = [
  { name="INiNiDS", email="ininids@ininids.in.rs" },
]
description = "AAML parser"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.24",
]

[project.urls]
"Homepage" = "https://github.com/INiNiDS/aam-py"

[tool.setuptools.packages.find]
include = ["aam_py*"]
